--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1 class="title">Pick Your Weapon</h1>
     <div class="btns">
         <button id="rock-btn">
-            <img class="rock" src="/img/zombie-rock.png" alt="Rock">
+            <img class="rock" src="./img/zombie-rock.png" alt="Rock">
         </button>
         <button id="paper-btn">
-            <img class="paper" src="/img/zombie-paper.png" alt="Paper">
+            <img class="paper" src="./img/zombie-paper.png" alt="Paper">
         </button>
         <button id="scissors-btn">
-            <img class="scissors" src="/img/zombie-scissors.png" alt="Scissors">
+            <img class="scissors" src="./img/zombie-scissors.png" alt="Scissors">
         </button>
     </div>
     <p id="para">Ready?</p>
