--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="title">Pick Your Weapon</h1>
-    <div class="btns">
+    <div class="btn">
         <button id="rock-btn">
             <img class="rock" src="./img/zombie-rock.png" alt="Rock">
         </button>
@@ -20,9 +20,9 @@
             <img class="scissors" src="./img/zombie-scissors.png" alt="Scissors">
         </button>
     </div>
-    <p id="para">Ready?</p>
+    <p id="para"> Ready? </p>
     <div class="reset-btn-container">
-        <button class="reset-btn">Restart</button>
+        <button class="reset-btn">RESTART</button>
     </div>
     <footer class="footer"> Copyrights ©️ 2023 <a href="https://github.com/marrri0" target="_blank">Marrri0</a></footer>
 </body>
