--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
         <link rel="stylesheet" href="loading-page.css">
     </head>
     <body>
+        <div class="audio-container">
+            <audio id="click-sound" src="./soundeffect/multimedia_button_click.mp3"></audio>
+            <audio id="win-sound" src="./soundeffect/Mario win sound Effect.mp3"></audio>
+            <audio id="loss-sound" src="./soundeffect/videogame-loss.mp3"></audio>
+        </div>
         <div class="loader">
             <h1 class="loader-h1">ROCK PAPER SCISSORS</h1>
-            <h1 class="loader-h2">
-                <span class="span-1">CAN</span>
-                <span class="span-2">YOU</span>
-                <span class="span-3">BEAT</span>
-                <span class="span-4">THE</span>
-                <span class="span-5">MACHINE ?</span>
-            </h1>
+            <h1 class="loader-h2">CAN YOU BEAT THE MACHINE ?</h1>
             <h3 class="loader-h3">FIRST TO 5 WINS</h3>
             <h1 class="loading-sign">LOADING</h1>
+            <footer>COPYRIGHTS ©️ MARRRI0</footer>
         </div>
         <div class="body-container">
             <div class="header-container">
@@ -28,21 +28,34 @@
             </div>
 
             <div class="btn">
-                <button id="rock-btn" class="selection">
-                <img class="rock" src="./img/zombie-rock.png" alt="rock">
-                </button>
-                <button id="paper-btn" class="selection">
-                <img class="paper" src="./img/zombie-paper.png" alt="paper">
-                </button>
-                <button id="scissors-btn" class="selection">
-                <img class="scissors" src="./img/zombie-scissors.png" alt="scissors">
-                </button>
+                <div class="computer-btn">
+                    <button id="rock-btn" class="robot-rock-btn">
+                        <img class="robot-rock" src="./img/robot_rock.png">
+                        </button>
+                        <button id="paper-btn" class="robot-paper-btn">
+                        <img class="robot-paper" src="./img/robot_paper.png">
+                        </button>
+                        <button id="scissors-btn" class="robot-scissors-btn">
+                        <img class="robot-scissors" src="./img/robot_scissors.png">            
+                    </button>
+                </div>
+
+                <div class="player-btn">
+                    <button id="rock-btn" class="selection rock-choice">
+                        <img class="rock" src="./img/zombie-rock.png" alt="rock">
+                        </button>
+                        <button id="paper-btn" class="selection paper-choice">
+                        <img class="paper" src="./img/zombie-paper.png" alt="paper">
+                        </button>
+                        <button id="scissors-btn" class="selection scissors-choice">
+                        <img class="scissors" src="./img/zombie-scissors.png" alt="scissors">            
+                    </button>
+                </div>
             </div>
 
             <div class="score-result">
                 <p id="para">READY?</p>
                 <p id="scorePanel">HUMANITY 0 - 0 MACHINES</p>
-                <p id="choices"></p>
             </div>
                 <button class="reset-btn">AGAIN?</button>
         </div>
