--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 </div>
 
                 <div class="player-btn">
-                    <button id="rock-btn" class="selection rock-choice">
+                    <button class="selection rock-choice">
                         <img class="rock" src="./img/zombie-rock.png" alt="rock">
                         </button>
-                        <button id="paper-btn" class="selection paper-choice">
+                        <button class="selection paper-choice">
                         <img class="paper" src="./img/zombie-paper.png" alt="paper">
                         </button>
-                        <button id="scissors-btn" class="selection scissors-choice">
+                        <button class="selection scissors-choice">
                         <img class="scissors" src="./img/zombie-scissors.png" alt="scissors">            
                     </button>
                 </div>
